added twitter tweet scrape n agent

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 OPENAI_API_KEY=
 SCRAPIN_API_KEY=
 LINKEDIN_PROFILE_URL=
-TEST_JSON_URL=
-
+TEST_JSON_URL=github gist url for linkedin sample json
+TEST_JSON_TWITTER_URL=github gist url for twitter sample json
 TAVILY_API_KEY=
+
+TWITTER_API_KEY=YOUR_VALUE
+TWITTER_API_KEY_SECRET=YOUR_VALUE
+TWITTER_BEARER_TOKEN=YOUR_VALUE
+TWITTER_ACCESS_TOKEN=YOUR_VALUE
+TWITTER_ACCESS_TOKEN_SECRET=YOUR_VALUE
