--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ TWITTER_API_KEY_SECRET=YOUR_VALUE
 TWITTER_BEARER_TOKEN=YOUR_VALUE
 TWITTER_ACCESS_TOKEN=YOUR_VALUE
 TWITTER_ACCESS_TOKEN_SECRET=YOUR_VALUE
+
+LANGSMITH_API_KEY=
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+LANGSMITH_PROJECT=
